--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div id="error"></div>
 
     <!-- <script src="data.js"></script> -->
-    <script src="javascript.js">
+    <script src="javascript.js"></script>
+    <script>
         if('serviceWorker' in navigator) {
             console.log('ServiceWorker is available')
             navigator.serviceWorker.register("/insects/serviceworker.js")
