--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script>
         if('serviceWorker' in navigator) {
             console.log('ServiceWorker is available')
-            navigator.serviceWorker.register("/insects/serviceworker.js")
+            navigator.serviceWorker.register("/students-example/serviceworker.js")
     }   else{
             console.log('ServiceWorker is not available')
     }
