--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Implementation of objectlist</title>
+    <title>Implementation of students list</title>
     <link rel="stylesheet" href="mystyle.css">
     <link rel="manifest" href="manifest.json">
 </head>
@@ -17,14 +17,6 @@
 
     <!-- <script src="data.js"></script> -->
     <script src="javascript.js"></script>
-    <script>
-        if('serviceWorker' in navigator) {
-            console.log('ServiceWorker is available')
-            navigator.serviceWorker.register("/students-example/serviceworker.js")
-    }   else{
-            console.log('ServiceWorker is not available')
-    }
-    </script>
 </body>
 
 </html>
